--- a/Firmware/Klipper/generic-bigtreetech-octopus.cfg
+++ b/Firmware/Klipper/generic-bigtreetech-octopus.cfg
@@ -10,38 +10,40 @@
 
 # See docs/Config_Reference.md for a description of parameters.
 
+[include btt_octopus_pinout.cfg]
+
 # Driver0
 [stepper_x]
-step_pin: PF13
-dir_pin: PF12
-enable_pin: !PF14
+step_pin: DRIVER0_STEP_pin
+dir_pin: DRIVER0_DIR_pin
+enable_pin: !DRIVER0_EN_pin
 microsteps: 16
 rotation_distance: 40
-endstop_pin: PG6
+endstop_pin: DIAG0_pin
 position_endstop: 0
 position_max: 200
 homing_speed: 50
 
 # Driver1
 [stepper_y]
-step_pin: PG0
-dir_pin: PG1
-enable_pin: !PF15
+step_pin: DRIVER1_STEP_pin
+dir_pin: DRIVER1_DIR_pin
+enable_pin: !DRIVER1_EN_pin
 microsteps: 16
 rotation_distance: 40
-endstop_pin: PG9
+endstop_pin: DIAG1_pin
 position_endstop: 0
 position_max: 200
 homing_speed: 50
 
 # Driver2
 [stepper_z]
-step_pin: PF11
-dir_pin: PG3
-enable_pin: !PG5
+step_pin: DRIVER2_STEP_pin
+dir_pin: DRIVER2_DIR_pin
+enable_pin: !DRIVER2_EN_pin
 microsteps: 16
 rotation_distance: 8
-endstop_pin: PG10
+endstop_pin: DIAG2_pin
 position_endstop: 0.5
 position_max: 200
 
@@ -50,23 +52,23 @@ position_max: 200
 # This can be used for a second Z stepper, dual_carriage, extruder co-stepper,
 # or other accesory such as an MMU
 #[stepper_]
-#step_pin: PG4
-#dir_pin: PC1
-#enable_pin: PA0
-#endstop_pin: PG11
+#step_pin: DRIVER3_STEP_pin
+#dir_pin: DRIVER3_DIR_pin
+#enable_pin: DRIVER3_EN_pin
+#endstop_pin: DIAG3_pin
 #...
 
 # Driver4
 [extruder]
-step_pin: PF9
-dir_pin: PF10
-enable_pin: !PG2
+step_pin: DRIVER4_STEP_pin
+dir_pin: DRIVER4_DIR_pin
+enable_pin: !DRIVER4_EN_pin
 microsteps: 16
 rotation_distance: 33.500
 nozzle_diameter: 0.400
 filament_diameter: 1.750
-heater_pin: PA2 # HE0
-sensor_pin:  PF4 # T0
+heater_pin: HE0_pin
+sensor_pin:  T0_pin
 sensor_type: EPCOS 100K B57560G104F
 control: pid
 pid_Kp: 22.2
@@ -76,69 +78,69 @@ min_temp: 0
 max_temp: 250
 
 #[filament_switch_sensor material_0]
-#switch_pin: PG12
+#switch_pin: DIAG4_pin
 
 # Driver5
 #[extruder1]
-#step_pin: PC13
-#dir_pin: PF0
-#enable_pin: !PF1
-#heater_pin: PA3 # HE1
-#sensor_pin: PF5 # T1
+#step_pin: DRIVER5_STEP_pin
+#dir_pin: DRIVER5_DIR_pin
+#enable_pin: !DRIVER5_EN_pin
+#heater_pin: HE1_pin
+#sensor_pin: T1_pin
 #...
 
 #[filament_switch_sensor material_1]
-#switch_pin: PG13
+#switch_pin: DIAG5_pin
 
 # Driver6
 #[extruder2]
-#step_pin: PE2
-#dir_pin: PE3
-#enable_pin: !PD4
-#heater_pin: PB10 # HE2
-#sensor_pin: PF6 # T2
+#step_pin: DRIVER6_STEP_pin
+#dir_pin: DRIVER6_DIR_pin
+#enable_pin: !DRIVER6_EN_pin
+#heater_pin: HE2_pin
+#sensor_pin: T2_pin
 #...
 
 #[filament_switch_sensor material_2]
-#switch_pin: PG14
+#switch_pin: DIAG6_pin
 
 # Driver7
 #[extruder3]
-#step_pin: PE6
-#dir_pin: PA14
-#enable_pin: !PE0
-#heater_pin: PB11 # HE3
-#sensor_pin: PF7 # T3
+#step_pin: RIVER7_STEP_pin
+#dir_pin: DRIVER7_DIR_pin
+#enable_pin: !DRIVER7_EN_pin
+#heater_pin: HE3_pin
+#sensor_pin: T3_pin
 #...
 
 #[filament_switch_sensor material_3]
-#switch_pin: PG15
+#switch_pin: DIAG7_pin
 
 [heater_bed]
-heater_pin: PA1
-sensor_pin: PF3 # TB
+heater_pin: BED_OUT_pin
+sensor_pin: TB_pin
 sensor_type: ATC Semitec 104GT-2
 control: watermark
 min_temp: 0
 max_temp: 130
 
 [fan]
-pin: PA8
+pin: FAN0_pin
 
 #[heater_fan fan1]
-#pin: PE5
+#pin: FAN1_pin
 
 #[heater_fan fan2]
-#pin: PD12
+#pin: FAN2_pin
 
 #[heater_fan fan3]
-#pin: PD13
+#pin: FAN3_pin
 
 #[heater_fan fan4]
-#pin: PD14
+#pin: FAN4_pin
 
 #[controller_fan fan5]
-#pin: PD15
+#pin: FAN5_pin
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_Klipper_firmware_12345-if00
@@ -156,46 +158,50 @@ max_z_accel: 100
 ########################################
 
 #[tmc2209 stepper_x]
-#uart_pin: PC4
-##diag_pin: PG6
+#uart_pin: DRIVER0_CS_pin
+##diag_pin: DIAG0_pin
 #run_current: 0.800
 #stealthchop_threshold: 999999
 
 #[tmc2209 stepper_y]
-#uart_pin: PD11
-##diag_pin: PG9
+#uart_pin: DRIVER1_CS_pin
+##diag_pin: DIAG1_pin
 #run_current: 0.800
 #stealthchop_threshold: 999999
 
 #[tmc2209 stepper_z]
-#uart_pin: PC6
-##diag_pin: PG10
+#uart_pin: DRIVER2_CS_pin
+##diag_pin: DIAG2_pin
 #run_current: 0.650
 #stealthchop_threshold: 999999
 
 #[tmc2209 stepper_]
-#uart_pin: PC7
-##diag_pin: PG11
+#uart_pin: DRIVER3_CS_pin
+##diag_pin: DIAG3_pin
 #run_current: 0.650
 #stealthchop_threshold: 999999
 
 #[tmc2209 extruder]
-#uart_pin: PF2
+#uart_pin: DRIVER4_CS_pin
+##diag_pin: DIAG4_pin
 #run_current: 0.800
 #stealthchop_threshold: 999999
 
 #[tmc2209 extruder1]
-#uart_pin: PE4
+#uart_pin: DRIVER5_CS_pin
+##diag_pin: DIAG5_pin
 #run_current: 0.800
 #stealthchop_threshold: 999999
 
 #[tmc2209 extruder2]
-#uart_pin: PE1
+#uart_pin: DRIVER6_CS_pin
+##diag_pin: DIAG6_pin
 #run_current: 0.800
 #stealthchop_threshold: 999999
 
 #[tmc2209 extruder3]
-#uart_pin: PD3
+#uart_pin: DRIVER7_CS_pin
+##diag_pin: DIAG7_pin
 #run_current: 0.800
 #stealthchop_threshold: 999999
 
@@ -204,81 +210,69 @@ max_z_accel: 100
 ########################################
 
 #[tmc2130 stepper_x]
-#cs_pin: PC4
-#spi_bus: spi1
-##diag1_pin: PG6
+#cs_pin: DRIVER0_CS_pin
+#spi_bus: DRIVER_bus
+##diag_pin: DIAG0_pin
 #run_current: 0.800
 #stealthchop_threshold: 999999
 
 #[tmc2130 stepper_y]
-#cs_pin: PD11
-#spi_bus: spi1
-##diag1_pin: PG9
+#cs_pin: DRIVER1_CS_pin
+#spi_bus: DRIVER_bus
+##diag_pin: DIAG1_pin
 #run_current: 0.800
 #stealthchop_threshold: 999999
 
 #[tmc2130 stepper_z]
-#cs_pin: PC6
-#spi_bus: spi1
-##diag1_pin: PG10
+#cs_pin: DRIVER2_CS_pin
+#spi_bus: DRIVER_bus
+##diag_pin: DIAG2_pin
 #run_current: 0.650
 #stealthchop_threshold: 999999
 
 #[tmc2130 stepper_]
-#cs_pin: PC7
-#spi_bus: spi1
-##diag1_pin: PG11
+#cs_pin: DRIVER3_CS_pin
+#spi_bus: DRIVER_bus
+##diag_pin: DIAG3_pin
 #run_current: 0.800
 #stealthchop_threshold: 999999
 
 #[tmc2130 extruder]
-#cs_pin: PF2
-#spi_bus: spi1
+#cs_pin: DRIVER4_CS_pin
+#spi_bus: DRIVER_bus
+##diag_pin: DIAG4_pin
 #run_current: 0.800
 #stealthchop_threshold: 999999
 
 #[tmc2130 extruder1]
-#cs_pin: PE4
-#spi_bus: spi1
+#cs_pin: DRIVER5_CS_pin
+#spi_bus: DRIVER_bus
+##diag_pin: DIAG5_pin
 #run_current: 0.800
 #stealthchop_threshold: 999999
 
 #[tmc2130 extruder2]
-#cs_pin: PE1
-#spi_bus: spi1
+#cs_pin: DRIVER6_CS_pin
+#spi_bus: DRIVER_bus
+##diag_pin: DIAG6_pin
 #run_current: 0.800
 #stealthchop_threshold: 999999
 
 #[tmc2130 extruder3]
-#cs_pin: PD3
-#spi_bus: spi1
+#cs_pin: DRIVER7_CS_pin
+#spi_bus: DRIVER_bus
+##diag_pin: DIAG7_pin
 #run_current: 0.800
 #stealthchop_threshold: 999999
-
-[board_pins]
-aliases:
-    # EXP1 header
-    EXP1_1=PE8, EXP1_2=PE7,
-    EXP1_3=PE9, EXP1_4=PE10,
-    EXP1_5=PE12, EXP1_6=PE13,    # Slot in the socket on this side
-    EXP1_7=PE14, EXP1_8=PE15,
-    EXP1_9=<GND>, EXP1_10=<5V>,
-
-    # EXP2 header
-    EXP2_1=PA6, EXP2_2=PA5,
-    EXP2_3=PB1, EXP2_4=PA4,
-    EXP2_5=PB2, EXP2_6=PA7,      # Slot in the socket on this side
-    EXP2_7=PC15, EXP2_8=<RST>,
-    EXP2_9=<GND>, EXP2_10=PC5
 
 # See the sample-lcd.cfg file for definitions of common LCD displays.
 
 # A [probe] section can be defined instead with a pin: setting identical
 # to the sensor_pin: for a bltouch
 #[bltouch]
-#sensor_pin: PB7
-#control_pin: PB6
+#sensor_pin: BL_TOUCH_SENSOR_pin
+#control_pin: BL_TOUCH_CONTROL_pin
 #z_offset: 0
 
 #[neopixel my_neopixel]
-#pin: PB0
+#pin: RGB_LED_pin
