--- a/Firmware/Klipper/btt-octopus-pro-v1.1-pinout.cfg
+++ b/Firmware/Klipper/btt-octopus-pro-v1.1-pinout.cfg
@@ -1,7 +1,6 @@
-# This file contains common pin mappings for the BigTreeTech Octopus
-# and Octopus Pro boards. 
+# This file contains common pin mappings for the BigTreeTech Octopus Pro v1.1. 
 # Compiled according to the scheme, posted on github by BigTreeTech by Plynskiy Nikita
-# https://github.com/bigtreetech/BIGTREETECH-OCTOPUS-V1.0/blob/master/Hardware/BIGTREETECH%20Octopus%20-%20PIN.pdf
+# https://github.com/bigtreetech/BIGTREETECH-OCTOPUS-Pro/blob/master/Hardware/BIGTREETECH%20Octopus%20Pro%20V1.1-Pin.jpg
 
 [board_pins]
 aliases:
@@ -108,11 +107,11 @@ aliases:
     BL_TOUCH_CONTROL_pin=PB6,
     BL_TOUCH_SENSOR_pin=PB7,
     BL_TOUCH_SENSOR_GND=<GND>,
-	
-	#Inductive probe
-	PROBE_PWR=<PWR>
-	PROBE_GND=<GND>,
-	PROBE_pin=PC5,
+    
+    #Inductive probe
+    PROBE_PWR=<PWR>
+    PROBE_GND=<GND>,
+    PROBE_pin=PC5,
 
     # Power loss recovery
     POWER_DET_pin=PC0,
@@ -123,8 +122,8 @@ aliases:
     # Neopixel port
     RGB_LED_pin=PB10,
 
-	# SPI header
-	SPI_bus=spi1a,
+    # SPI header
+    SPI_bus=spi1a,
 
     # EXP1 header
     EXP1_1=PE8, EXP1_2=PE7,
