--- a/Firmware/Klipper/btt-octopus-pro-v1.1-pinout.cfg
+++ b/Firmware/Klipper/btt-octopus-pro-v1.1-pinout.cfg
@@ -124,7 +124,8 @@ aliases:
 
     # SPI header
     SPI_bus=spi1a,
-
+    SPI_CS_pin=PA15,
+    
     # EXP1 header
     EXP1_1=PE8, EXP1_2=PE7,
     EXP1_3=PE9, EXP1_4=PE10,
