--- a/Firmware/Klipper/btt-octopus-pro-v1.1-pinout.cfg
+++ b/Firmware/Klipper/btt-octopus-pro-v1.1-pinout.cfg
@@ -109,7 +109,7 @@ aliases:
     BL_TOUCH_SENSOR_GND=<GND>,
     
     #Inductive probe
-    PROBE_PWR=<PWR>
+    PROBE_PWR=<PWR>,
     PROBE_GND=<GND>,
     PROBE_pin=PC5,
 
